Source/WebCore/editing/VisibleSelection.cpp
@@ -30,6 +30,7 @@
 #include "Editing.h"
 #include "Element.h"
 #include "HTMLInputElement.h"
+#include "Settings.h"
 #include "TextIterator.h"
 #include "VisibleUnits.h"
 #include <stdio.h>
@@ -504,23 +505,45 @@ Position VisibleSelection::adjustPositionForStart(const Position& currentPositio
     return Position();
 }
 
+static bool isInUserAgentShadowRootOrHasEditableShadowAncestor(Node& node)
+{
+    auto* shadowRoot = node.containingShadowRoot();
+    if (!shadowRoot)
+        return false;
+
+    if (shadowRoot->mode() == ShadowRootMode::UserAgent)
+        return true;
+
+    for (RefPtr<Node> currentNode = &node; currentNode; currentNode = currentNode->parentOrShadowHostNode()) {
+        if (currentNode->hasEditableStyle())
+            return true;
+    }
+    return false;
+}
+
 void VisibleSelection::adjustSelectionToAvoidCrossingShadowBoundaries()
 {
     if (m_base.isNull() || m_start.isNull() || m_end.isNull())
         return;
 
-    if (&m_start.anchorNode()->treeScope() == &m_end.anchorNode()->treeScope())
+    auto startNode = makeRef(*m_start.anchorNode());
+    auto endNode = makeRef(*m_end.anchorNode());
+    if (&startNode->treeScope() == &endNode->treeScope())
         return;
 
-    if (m_baseIsFirst) {
-        m_extent = adjustPositionForEnd(m_end, m_start.containerNode());
-        m_end = m_extent;
-    } else {
-        m_extent = adjustPositionForStart(m_start, m_end.containerNode());
-        m_start = m_extent;
+    if (startNode->document().settings().selectionAcrossShadowBoundariesEnabled()) {
+        if (!isInUserAgentShadowRootOrHasEditableShadowAncestor(startNode)
+            && !isInUserAgentShadowRootOrHasEditableShadowAncestor(endNode))
+            return;
     }
 
-    ASSERT(&m_start.anchorNode()->treeScope() == &m_end.anchorNode()->treeScope());
+    if (m_baseIsFirst) {
+        m_extent = adjustPositionForEnd(m_end, startNode.ptr());
+        m_end = m_extent;
+    } else {
+        m_extent = adjustPositionForStart(m_start, endNode.ptr());
+        m_start = m_extent;
+    }
 }
 
 void VisibleSelection::adjustSelectionToAvoidCrossingEditingBoundaries()
