Tools/DumpRenderTree/TestOptions.cpp
@@ -101,6 +101,8 @@ TestOptions::TestOptions(const std::string& pathOrURL, const std::string& absolu
             allowCrossOriginSubresourcesToAskForCredentials = parseBooleanTestHeaderValue(value);
         else if (key == "experimental:WebAnimationsCSSIntegrationEnabled")
             enableWebAnimationsCSSIntegration = parseBooleanTestHeaderValue(value);
+        else if (key == "internal:selectionAcrossShadowBoundariesEnabled")
+            enableSelectionAcrossShadowBoundaries = parseBooleanTestHeaderValue(value);
         else if (key == "enableColorFilter")
             enableColorFilter = parseBooleanTestHeaderValue(value);
         else if (key == "jscOptions")
