Tools/DumpRenderTree/TestOptions.h
@@ -43,6 +43,7 @@ struct TestOptions {
     bool dumpJSConsoleLogInStdErr { false };
     bool allowCrossOriginSubresourcesToAskForCredentials { false };
     bool enableColorFilter { false };
+    bool enableSelectionAcrossShadowBoundaries { false };
     std::string jscOptions;
 
     TestOptions(const std::string& pathOrURL, const std::string& absolutePath);
